@@ -29,7 +29,7 @@
     <parent>
         <groupId>oap</groupId>
         <artifactId>oap.maven</artifactId>
-        <version>3.0.3</version>
+        <version>17.3.0.4</version>
     </parent>
 
     <packaging>pom</packaging>
@@ -67,7 +67,7 @@
     </dependencies>
 
     <properties>
-        <oap.project.version>17.0.0</oap.project.version>
+        <oap.project.version>17.17.0.0</oap.project.version>
 
 
         <oap.deps.testng.version>7.4.0</oap.deps.testng.version>
@@ -115,7 +115,7 @@
         <oap.deps.maven.plugin-api.version>3.8.1</oap.deps.maven.plugin-api.version>
         <oap.deps.maven.version>3.0-alpha-2</oap.deps.maven.version>
         <oap.deps.maven.plugin-annotations.version>3.6.1</oap.deps.maven.plugin-annotations.version>
-        <oap.deps.maven.plugin-plugin.version>3.6.0</oap.deps.maven.plugin-plugin.version>
+        <oap.deps.maven.plugin-plugin.version>3.6.1</oap.deps.maven.plugin-plugin.version>
         <oap.deps.plugins.antlr4.version>4.9.2</oap.deps.plugins.antlr4.version>
 
         <oap.deps.aws-java-sdk.version>1.12.29</oap.deps.aws-java-sdk.version>
@@ -125,23 +125,4 @@
 
         <oap.deps.undertow.version>2.2.9.Final</oap.deps.undertow.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
-                        --add-opens=java.base/java.math=ALL-UNNAMED
-                        --add-opens=java.base/java.util=ALL-UNNAMED
-                        --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                        --add-opens=java.base/java.net=ALL-UNNAMED
-                        --add-opens=java.base/java.text=ALL-UNNAMED
-                        --add-opens=java.sql/java.sql=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 </project>
